<resources>
    <string name="app_name">mmanager</string>
    <string name="amap_key">0997e9925facac62ec4a7bd4dd263b52</string>
    <string name="title_report_trouble">上报故障</string>
    <string name="title_create_record">创建记录</string>
    <string name="list_more"><![CDATA[更多 >>]]></string>
    <string name="tab_home_manage">管理</string>
    <string name="tab_home_message">消息</string>
    <string name="tab_home_home">首页</string>
    <string name="tab_home_mine">我的</string>
    <string name="btn_log_out">注销登录</string>
    <string name="item_mine_about">关于</string>
    <string name="item_mine_setting">设置</string>
    <string name="item_mine_history">足迹</string>
    <string name="home_head_scan">扫描</string>
    <string name="home_head_lift">电梯</string>
    <string name="home_head_user">用户</string>
    <string name="home_head_help">帮助</string>
    <string name="home_module_lift">电梯</string>
    <string name="home_module_change">变更</string>
    <string name="home_module_record">记录</string>
    <string name="home_module_trouble">故障</string>
    <string name="home_module_user">用户</string>
    <string name="home_module_event">事件</string>
    <string name="home_module_device">设备</string>
    <string name="home_module_data">数据</string>
    <string name="home_module_configq">配置</string>
    <string name="home_module_company">公司</string>
    <string name="home_module_all">所有</string>
    <string name="record_progress_under_start">待开始</string>
    <string name="record_progress_under_process">待处理</string>
    <string name="record_progress_under_review">待审核</string>
    <string name="record_progress_finished">已完成</string>
    <string name="fill_record_info_title">基本信息</string>
    <string name="fill_record_media_title">媒体文件</string>
    <string name="fill_record_content_title">记录</string>
    <string name="fill_record_title">填写记录</string>
</resources>