<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_padding_small_24dp"
            android:paddingBottom="@dimen/item_padding_small_24dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_avatar"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="@dimen/item_margin_medium_48dp"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_height_medium_48dp"
                android:layout_marginStart="@dimen/item_margin_small_24dp"
                android:gravity="center"
                android:textColor="@color/md_black_1000"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/iv_avatar"
                app:layout_constraintTop_toTopOf="@id/iv_avatar" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_brief"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_height_small_24dp"
                android:layout_marginStart="@dimen/item_margin_small_24dp"
                android:gravity="center"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/iv_avatar"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_medium_48dp"
        android:layout_marginTop="@dimen/item_margin_small_24dp"
        android:background="@color/md_white_1000"
        app:layout_constraintTop_toBottomOf="@id/cv_user_info">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/iv_history"
                android:layout_width="@dimen/icon_size_48dp"
                android:layout_height="@dimen/icon_size_48dp"
                android:layout_marginStart="@dimen/item_margin_small_24dp"
                app:iiv_color="@color/md_black_1000"
                app:iiv_icon="cmd_timer"
                app:iiv_size="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_margin_small_24dp"
                android:text="@string/item_mine_history"
                android:textColor="@color/md_black_1000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_history"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="72dp"
                android:background="@color/colorPrimaryBackground"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_medium_48dp"
        android:background="@color/md_white_1000"
        app:layout_constraintTop_toBottomOf="@id/cv_history">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/iv_setting"
                android:layout_width="@dimen/icon_size_48dp"
                android:layout_height="@dimen/icon_size_48dp"
                android:layout_marginStart="@dimen/item_margin_small_24dp"
                app:iiv_color="@color/md_black_1000"
                app:iiv_icon="cmd_settings"
                app:iiv_size="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_margin_small_24dp"
                android:text="@string/item_mine_setting"
                android:textColor="@color/md_black_1000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_setting"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="72dp"
                android:background="@color/colorPrimaryBackground"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_medium_48dp"
        android:background="@color/md_white_1000"
        app:layout_constraintTop_toBottomOf="@id/cv_setting">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/iv_about"
                android:layout_width="@dimen/icon_size_48dp"
                android:layout_height="@dimen/icon_size_48dp"
                android:layout_marginStart="@dimen/item_margin_small_24dp"
                app:iiv_color="@color/md_black_1000"
                app:iiv_icon="cmd_gift"
                app:iiv_size="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_margin_small_24dp"
                android:text="@string/item_mine_about"
                android:textColor="@color/md_black_1000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_about"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_medium_48dp"
        android:layout_marginTop="@dimen/item_margin_small_24dp"
        android:background="@color/md_white_1000"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/cv_about">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/btn_log_out"
            android:textColor="@color/md_black_1000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_setting"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>