<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground">

    <include
        android:id="@+id/inc_tb"
        layout="@layout/include_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_margin_small_12dp"
        app:cardCornerRadius="@dimen/cardview_radius_16dp"
        app:layout_constraintTop_toBottomOf="@id/inc_tb">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/item_padding_small_24dp">

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/icon_info"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_height_small_24dp"
                app:iiv_color="@color/colorPrimaryDark"
                app:iiv_icon="cmd_information"
                app:iiv_size="@dimen/icon_size_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_info_title"
                style="@style/SmallText.BlueBackground.Bold"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_height_small_24dp"
                android:layout_marginStart="@dimen/item_margin_small_12dp"
                android:gravity="center_vertical"
                android:text="@string/fill_record_info_title"
                app:layout_constraintLeft_toRightOf="@id/icon_info"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_lift_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_margin_small_24dp"
                android:layout_marginTop="@dimen/item_margin_small_12dp"
                android:gravity="center_vertical"
                android:padding="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_margin_small_24dp"
                android:padding="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_lift_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/item_margin_small_24dp"
        app:layout_constraintTop_toBottomOf="@id/cv_info"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin_small_12dp"
                app:cardCornerRadius="@dimen/cardview_radius_16dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/item_padding_small_24dp">

                    <com.mikepenz.iconics.view.IconicsImageView
                        android:id="@+id/icon_media"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/item_height_small_24dp"
                        app:iiv_color="@color/colorPrimaryDark"
                        app:iiv_icon="cmd_image_area"
                        app:iiv_size="@dimen/icon_size_24dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_media_title"
                        style="@style/SmallText.BlueBackground.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/item_height_small_24dp"
                        android:layout_marginStart="@dimen/item_margin_small_12dp"
                        android:gravity="center_vertical"
                        android:text="@string/fill_record_media_title"
                        app:layout_constraintLeft_toRightOf="@id/icon_media"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rc_media"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/item_margin_small_12dp"
                        android:layout_marginTop="@dimen/item_margin_small_24dp"
                        android:layout_marginRight="@dimen/item_margin_small_12dp"
                        app:layout_constraintTop_toBottomOf="@id/icon_media" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin_small_12dp"
                app:cardCornerRadius="@dimen/cardview_radius_16dp"
                app:layout_constraintTop_toBottomOf="@id/cv_media">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/item_padding_small_24dp">

                    <com.mikepenz.iconics.view.IconicsImageView
                        android:id="@+id/icon_content"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/item_height_small_24dp"
                        app:iiv_color="@color/colorPrimaryDark"
                        app:iiv_icon="cmd_library_books"
                        app:iiv_size="@dimen/icon_size_24dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_content_title"
                        style="@style/SmallText.BlueBackground.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/item_height_small_24dp"
                        android:layout_marginStart="@dimen/item_margin_small_12dp"
                        android:gravity="center_vertical"
                        android:text="@string/fill_record_content_title"
                        app:layout_constraintLeft_toRightOf="@id/icon_content"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/item_height_medium_48dp"
                        android:layout_marginLeft="@dimen/item_margin_small_12dp"
                        android:layout_marginTop="@dimen/item_margin_small_24dp"
                        android:layout_marginRight="@dimen/item_margin_small_12dp"
                        app:layout_constraintTop_toBottomOf="@id/icon_content" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_medium_48dp"
                android:layout_marginBottom="@dimen/item_margin_medium_48dp"
                android:background="@drawable/shape_text_blue_bg"
                android:padding="8dp"
                android:text="Submit"
                android:textColor="@color/md_white_1000"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/cv_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>